--- a/index.html
+++ b/index.html
@@ -86,9 +86,15 @@
                 </div>
                 <div class="header-actions">
                     <div class="header-greeting" id="header-user-greeting" aria-live="polite">
-                        <span class="greeting-label">Olá,</span>
-                        <span class="greeting-name" id="header-user-greeting-name">Usuário</span>
+                        <span class="status-dot" aria-hidden="true"></span>
+                        <span class="greeting-role" id="header-user-greeting-role">Administrador Geral</span>
+                        <span class="greeting-shift" id="header-user-greeting-shift">MT</span>
                     </div>
+                </div>
+                <div class="header-quick-actions">
+                    <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
+                        <i class="fas fa-moon" aria-hidden="true"></i>
+                    </button>
                     <div class="header-selectors compact">
                         <div class="selector-group compact">
                             <label for="profile-select" class="sr-only">Perfil</label>
@@ -108,29 +114,24 @@
                                 <option value="acompanhante" data-icon="fas fa-people-roof" data-description="Acompanhamento dedicado aos pacientes">Acompanhantes</option>
                             </select>
                         </div>
-                    </div>
-                    <div class="selector-group compact">
-                        <label for="unit-select" class="sr-only">Unidade</label>
-                        <div class="selector-control compact" data-selector>
-                            <button type="button" class="selector-trigger" id="unit-select-trigger" aria-haspopup="listbox" aria-expanded="false" aria-label="Unidade">
-                                <i class="fas fa-building selector-icon" aria-hidden="true"></i>
-                                <div class="selector-trigger-text">
-                                    <span class="selector-trigger-label">Todas as unidades</span>
-                                    <span class="selector-trigger-description">Visualização geral por setor</span>
-                                </div>
-                                <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
-                            </button>
-                            <div class="selector-dropdown" role="listbox" aria-labelledby="unit-select-trigger"></div>
-                            <select id="unit-select" class="selector-input" aria-hidden="true" tabindex="-1">
-                                <option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>
-                            </select>
+                        <div class="selector-group compact">
+                            <label for="unit-select" class="sr-only">Unidade</label>
+                            <div class="selector-control compact" data-selector>
+                                <button type="button" class="selector-trigger" id="unit-select-trigger" aria-haspopup="listbox" aria-expanded="false" aria-label="Unidade">
+                                    <i class="fas fa-building selector-icon" aria-hidden="true"></i>
+                                    <div class="selector-trigger-text">
+                                        <span class="selector-trigger-label">Todas as unidades</span>
+                                        <span class="selector-trigger-description">Visualização geral por setor</span>
+                                    </div>
+                                    <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
+                                </button>
+                                <div class="selector-dropdown" role="listbox" aria-labelledby="unit-select-trigger"></div>
+                                <select id="unit-select" class="selector-input" aria-hidden="true" tabindex="-1">
+                                    <option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="header-quick-actions">
-                    <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
-                        <i class="fas fa-moon" aria-hidden="true"></i>
-                    </button>
                     <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
                         <i class="fas fa-bell" aria-hidden="true"></i>
                         <span class="notification-badge">0</span>
