Ajusta ordem dos atalhos no cabeçalho

--- a/style.html
+++ b/style.html
@@ -1193,6 +1193,7 @@
         }
         .header-quick-actions .header-selectors.compact {
             align-items: center;
+            flex-wrap: nowrap;
         }
         .header-quick-actions .selector-group.compact {
             flex: 0 0 auto;
