Refactor header actions layout

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="header-quick-actions">
-                    <div class="header-selectors compact">
+                    <div class="header-actions">
                         <div class="selector-group compact">
                             <label for="profile-select" class="sr-only">Perfil</label>
                             <div class="selector-control compact" data-selector>
@@ -126,19 +126,19 @@
                                 </select>
                             </div>
                         </div>
-                    </div>
-                    <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
-                        <i class="fas fa-moon" aria-hidden="true"></i>
-                    </button>
-                    <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
-                        <i class="fas fa-bell" aria-hidden="true"></i>
-                        <span class="notification-badge">0</span>
-                    </div>
-                    <div class="user-profile" id="header-user-profile" role="button" tabindex="0" aria-haspopup="dialog" aria-controls="avatar-modal" aria-expanded="false">
-                        <div class="user-avatar" id="header-user-avatar">--</div>
-                        <div class="user-details" aria-hidden="true">
-                            <strong id="header-user-name">Usuário</strong>
-                            <span id="header-user-role">Perfil geral</span>
+                        <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
+                            <i class="fas fa-moon" aria-hidden="true"></i>
+                        </button>
+                        <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
+                            <i class="fas fa-bell" aria-hidden="true"></i>
+                            <span class="notification-badge">0</span>
+                        </div>
+                        <div class="user-profile" id="header-user-profile" role="button" tabindex="0" aria-haspopup="dialog" aria-controls="avatar-modal" aria-expanded="false">
+                            <div class="user-avatar" id="header-user-avatar">--</div>
+                            <div class="user-details" aria-hidden="true">
+                                <strong id="header-user-name">Usuário</strong>
+                                <span id="header-user-role">Perfil geral</span>
+                            </div>
                         </div>
                     </div>
                 </div>
