--- a/style.html
+++ b/style.html
@@ -1186,6 +1186,14 @@
             flex-wrap: nowrap;
             min-width: 0;
         }
+        .header-actions {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 8px;
+            flex-wrap: nowrap;
+            min-width: 0;
+        }
         .header-quick-actions .header-selectors {
             flex: 0 0 auto;
             gap: 8px;
