--- a/style.html
+++ b/style.html
@@ -796,7 +796,7 @@
             padding: 15px 0;
             margin-bottom: 20px;
             border-bottom: 1px solid color-mix(in srgb, var(--dark-color) 8%, transparent);
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             gap: 16px;
             position: relative;
             z-index: var(--z-header);
@@ -836,11 +836,9 @@
         .header-actions {
             display: flex;
             align-items: center;
-            gap: 12px;
-            flex-wrap: wrap;
-            justify-content: flex-end;
-            flex: 1 1 auto;
-            min-width: 0;
+            flex-direction: row;
+            gap: 8px;
+            flex-wrap: nowrap;
         }
         .header-greeting {
             display: flex;
@@ -1183,6 +1181,17 @@
             align-items: center;
             gap: 8px;
             flex-shrink: 1;
+            flex-wrap: nowrap;
+            min-width: 0;
+            width: auto;
+            order: 0;
+            flex-shrink: 0;
+        }
+        .header-actions {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 8px;
             flex-wrap: nowrap;
             min-width: 0;
         }
