--- a/index.html
+++ b/index.html
@@ -91,53 +91,57 @@
                 </div>
                 <div class="header-quick-actions">
                     <div class="header-actions">
-                        <div class="selector-group compact">
-                            <label for="profile-select" class="sr-only">Perfil</label>
-                            <div class="selector-control compact" data-selector>
-                                <button type="button" class="selector-trigger" id="profile-select-trigger" aria-haspopup="listbox" aria-expanded="false" aria-label="Perfil">
-                                <i class="fas fa-users selector-icon" aria-hidden="true"></i>
-                                <div class="selector-trigger-text">
-                                    <span class="selector-trigger-label">Perfil geral</span>
-                                    <span class="selector-trigger-description">Visão consolidada do atendimento</span>
-                                </div>
-                                <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
-                            </button>
-                            <div class="selector-dropdown" role="listbox" aria-labelledby="profile-select-trigger"></div>
-                            <select id="profile-select" class="selector-input" aria-hidden="true" tabindex="-1">
-                                <option value="geral" selected data-icon="fas fa-chart-line" data-description="Visão consolidada do atendimento">Perfil geral</option>
-                                <option value="visitante" data-icon="fas fa-id-badge" data-description="Gestão completa dos visitantes">Visitantes</option>
-                                <option value="acompanhante" data-icon="fas fa-people-roof" data-description="Acompanhamento dedicado aos pacientes">Acompanhantes</option>
-                            </select>
-                        </div>
-                        <div class="selector-group compact">
-                            <label for="unit-select" class="sr-only">Unidade</label>
-                            <div class="selector-control compact" data-selector>
-                                <button type="button" class="selector-trigger" id="unit-select-trigger" aria-haspopup="listbox" aria-expanded="false" aria-label="Unidade">
-                                    <i class="fas fa-building selector-icon" aria-hidden="true"></i>
+                        <div class="header-selector-pair" aria-label="Filtros de perfil e unidade">
+                            <div class="selector-group compact">
+                                <label for="profile-select" class="sr-only">Perfil</label>
+                                <div class="selector-control compact" data-selector>
+                                    <button type="button" class="selector-trigger" id="profile-select-trigger" aria-haspopup="listbox" aria-expanded="false" aria-label="Perfil">
+                                    <i class="fas fa-users selector-icon" aria-hidden="true"></i>
                                     <div class="selector-trigger-text">
-                                        <span class="selector-trigger-label">Todas as unidades</span>
-                                        <span class="selector-trigger-description">Visualização geral por setor</span>
+                                        <span class="selector-trigger-label">Perfil geral</span>
+                                        <span class="selector-trigger-description">Visão consolidada do atendimento</span>
                                     </div>
                                     <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
                                 </button>
-                                <div class="selector-dropdown" role="listbox" aria-labelledby="unit-select-trigger"></div>
-                                <select id="unit-select" class="selector-input" aria-hidden="true" tabindex="-1">
-                                    <option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>
+                                <div class="selector-dropdown" role="listbox" aria-labelledby="profile-select-trigger"></div>
+                                <select id="profile-select" class="selector-input" aria-hidden="true" tabindex="-1">
+                                    <option value="geral" selected data-icon="fas fa-chart-line" data-description="Visão consolidada do atendimento">Perfil geral</option>
+                                    <option value="visitante" data-icon="fas fa-id-badge" data-description="Gestão completa dos visitantes">Visitantes</option>
+                                    <option value="acompanhante" data-icon="fas fa-people-roof" data-description="Acompanhamento dedicado aos pacientes">Acompanhantes</option>
                                 </select>
                             </div>
+                            <div class="selector-group compact">
+                                <label for="unit-select" class="sr-only">Unidade</label>
+                                <div class="selector-control compact" data-selector>
+                                    <button type="button" class="selector-trigger" id="unit-select-trigger" aria-haspopup="listbox" aria-expanded="false" aria-label="Unidade">
+                                        <i class="fas fa-building selector-icon" aria-hidden="true"></i>
+                                        <div class="selector-trigger-text">
+                                            <span class="selector-trigger-label">Todas as unidades</span>
+                                            <span class="selector-trigger-description">Visualização geral por setor</span>
+                                        </div>
+                                        <span class="selector-arrow" aria-hidden="true"><i class="fas fa-angle-down"></i></span>
+                                    </button>
+                                    <div class="selector-dropdown" role="listbox" aria-labelledby="unit-select-trigger"></div>
+                                    <select id="unit-select" class="selector-input" aria-hidden="true" tabindex="-1">
+                                        <option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
-                        <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
-                            <i class="fas fa-moon" aria-hidden="true"></i>
-                        </button>
-                        <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
-                            <i class="fas fa-bell" aria-hidden="true"></i>
-                            <span class="notification-badge">0</span>
-                        </div>
-                        <div class="user-profile" id="header-user-profile" role="button" tabindex="0" aria-haspopup="dialog" aria-controls="avatar-modal" aria-expanded="false">
-                            <div class="user-avatar" id="header-user-avatar">--</div>
-                            <div class="user-details" aria-hidden="true">
-                                <strong id="header-user-name">Usuário</strong>
-                                <span id="header-user-role">Perfil geral</span>
+                        <div class="header-icon-actions">
+                            <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Ativar tema escuro" aria-pressed="false">
+                                <i class="fas fa-moon" aria-hidden="true"></i>
+                            </button>
+                            <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
+                                <i class="fas fa-bell" aria-hidden="true"></i>
+                                <span class="notification-badge">0</span>
+                            </div>
+                            <div class="user-profile" id="header-user-profile" role="button" tabindex="0" aria-haspopup="dialog" aria-controls="avatar-modal" aria-expanded="false">
+                                <div class="user-avatar" id="header-user-avatar">--</div>
+                                <div class="user-details" aria-hidden="true">
+                                    <strong id="header-user-name">Usuário</strong>
+                                    <span id="header-user-role">Perfil geral</span>
+                                </div>
                             </div>
                         </div>
                     </div>
