--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                     </div>
                     <div class="form-group">
                         <label for="usuario-senha">Senha</label>
-                        <input type="text" id="usuario-senha" class="form-control" required>
+                        <input type="password" id="usuario-senha" class="form-control" autocomplete="new-password" required>
                     </div>
                     <div class="form-group">
                         <label for="usuario-perfil">Perfil</label>
