Fix mobile header actions alignment

--- a/style.html
+++ b/style.html
@@ -5642,7 +5642,7 @@
             }
             .header-quick-actions {
                 order: 1;
-                justify-content: flex-start;
+                justify-content: flex-end;
                 align-self: stretch;
             }
             .header-selectors {
