Atualizar dashboard imediatamente em termo

--- a/script.html
+++ b/script.html
@@ -3876,7 +3876,7 @@
             renderizarArmariosAgendamento = { tipo: 'timeout', id };
         }
         // Renderizar lista de armários no dashboard
-        function renderizarArmarios() {
+        function renderizarArmarios(opcoes = {}) {
             if (!elementos.armariosContainer) return;
             cancelarRenderizacaoArmarios();
             renderizarArmariosVersao += 1;
@@ -3944,6 +3944,16 @@
                 card.addEventListener('click', () => abrirModalArmario(armario));
                 return card;
             };
+
+            if (opcoes.imediato) {
+                const fragment = document.createDocumentFragment();
+                armariosParaExibir.forEach(armario => {
+                    fragment.appendChild(criarCardArmario(armario));
+                });
+                elementos.armariosContainer.appendChild(fragment);
+                renderizarArmariosAgendamento = null;
+                return;
+            }
 
             const processarLote = (deadline) => {
                 if (versaoExecucao !== renderizarArmariosVersao) return;
@@ -4024,6 +4034,16 @@
             elementos.cardsCount.proximo.textContent = totais.proximo;
             elementos.cardsCount.contingencia.textContent = totais.contingencia;
             elementos.cardsCount.vencidos.textContent = totais.vencidos;
+        }
+
+        function atualizarDashboardImediato() {
+            atualizarResumoDashboardLocal();
+            ajustarFiltrosDashboardParaPerfil();
+            atualizarVisibilidadeContingencia();
+            atualizarVisibilidadeCardsHero();
+            if (estado.paginaAtual === 'dashboard') {
+                renderizarArmarios({ imediato: true });
+            }
         }
 
         function atualizarArmarioLocal(id, atualizacoes) {
@@ -7806,6 +7826,8 @@
                 mostrarErro('Armário não encontrado para registrar o termo.');
                 return;
             }
+            const snapshotArmario = clonarArmario(armarioAtual);
+            const armarioIdLocal = armarioAtual.id;
             const identificadores = montarIdentificadoresArmario(armarioAtual);
             // Capturar a assinatura do canvas
             const canvas = elementos.termoAssinaturaCanvas;
@@ -7845,6 +7867,41 @@
                 };
             }
             dadosTermo.tipo = identificadores?.tipo || 'acompanhante';
+            if (armarioIdLocal) {
+                const agoraIso = new Date().toISOString();
+                const termoInfoAtualizado = {
+                    ...(armarioAtual.termoInfo || {}),
+                    aplicadoEm: agoraIso,
+                    acompanhante: dadosTermo.acompanhante,
+                    paciente: dadosTermo.paciente,
+                    prontuario: dadosTermo.prontuario,
+                    leito: dadosTermo.leito,
+                    status: 'Em andamento'
+                };
+                const atualizacoesLocais = {
+                    termoAplicado: true,
+                    termoFinalizado: false,
+                    termoStatus: 'em andamento',
+                    termoInfo: termoInfoAtualizado
+                };
+                if (dadosTermo.acompanhante) {
+                    atualizacoesLocais.nomeVisitante = dadosTermo.acompanhante;
+                }
+                if (dadosTermo.paciente) {
+                    atualizacoesLocais.nomePaciente = dadosTermo.paciente;
+                }
+                if (dadosTermo.leito) {
+                    atualizacoesLocais.leito = dadosTermo.leito;
+                }
+                if (dadosTermo.prontuario) {
+                    atualizacoesLocais.prontuario = dadosTermo.prontuario;
+                }
+                atualizarArmarioLocal(armarioIdLocal, atualizacoesLocais);
+                atualizarDashboardImediato();
+                carregarDadosTabelas({ recarregarArmarios: false }).catch(erro => {
+                    console.error('Erro ao atualizar tabelas localmente após aplicar termo:', erro);
+                });
+            }
             const promessaSalvamento = callGoogleScript('salvarTermoCompleto', dadosTermo);
             notificarReservaEmSegundoPlano();
             fecharTermoModal();
@@ -7854,6 +7911,9 @@
             } catch (erroSalvar) {
                 console.error('Erro ao salvar termo:', erroSalvar);
                 mostrarErro('Não foi possível registrar o termo agora. Tente novamente.');
+                if (armarioIdLocal) {
+                    restaurarArmarioLocal(armarioIdLocal, snapshotArmario);
+                }
                 return;
             }
             if (resultado?.success) {
@@ -7872,6 +7932,9 @@
                 }
             } else {
                 notificarErroPadrao(resultado);
+                if (armarioIdLocal) {
+                    restaurarArmarioLocal(armarioIdLocal, snapshotArmario);
+                }
             }
         }
         function fecharTermoModal() {
@@ -9320,6 +9383,8 @@
             const confirmacao = '';
             let mensagemSucesso = 'Termo finalizado e armário liberado com sucesso';
             const usuarioResponsavel = obterDescricaoResponsavelAtual();
+            const snapshotArmario = clonarArmario(armario);
+            let liberacaoConfirmada = false;
 
             const notificarProcessamentoEmSegundoPlano = () => {
                 Swal.fire({
@@ -9382,6 +9447,7 @@
                         mensagemSucesso = 'Armário liberado com sucesso. Termo não localizado para finalização.';
                     }
 
+                    liberacaoConfirmada = true;
                     garantirArmarioLiberadoLocal(id, metodo, confirmacao);
                     atualizarResumoDashboardLocal();
                     atualizarInterface();
@@ -9398,9 +9464,20 @@
                 } catch (erro) {
                     console.error('Erro ao liberar armário de acompanhante:', erro);
                     mostrarErro('Não foi possível concluir a liberação. Tente novamente.');
+                } finally {
+                    if (!liberacaoConfirmada && snapshotArmario) {
+                        restaurarArmarioLocal(id, snapshotArmario);
+                    }
                 }
             };
 
+            const atualizouLocal = garantirArmarioLiberadoLocal(id, metodo, confirmacao);
+            if (atualizouLocal) {
+                atualizarDashboardImediato();
+                carregarDadosTabelas({ recarregarArmarios: false }).catch(erro => {
+                    console.error('Erro ao atualizar tabelas localmente após liberação:', erro);
+                });
+            }
             notificarProcessamentoEmSegundoPlano();
             executarLiberacaoAssincrona();
         }
